Versao funcional com as rotas reduzidas
